<resources>
    <string name="app_name">GH16-Zhdanov-Lists</string>
    <string name="no_internet">No internet connection!</string>
    <string name="title_list_view">Show ListView</string>
    <string name="title_recylcer_view">Show RecycleView (Realm)</string>
    <string name="button_git">GIT</string>
    <string name="title_activity_person_google_plus">PersonGooglePlusActivity</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>

    <string name="error_in_link">No data from server.\n Please check the address!</string>

    <string name="server_name_google">Google +</string>
    <string name="server_name_git">GIT</string>

    <string name="chooser_title">Choose browser</string>
    <string name="more_info">More info</string>
    <string name="have_repositories_on_git">Public repositories</string>

    <string name="title_activity_contacts">Read contacts from phone</string>
    <string name="name_hint">Person name</string>
    <string name="phone_hint">000-000-00-00</string>
    <string name="add_button">Add to contacts</string>
    <string name="new_contact_title">Add new contact</string>
    <string name="new_contact_empty_fields">Name or phone is empty</string>
    <string name="new_contact_created">New contact created</string>
    <string name="new_contact_error">Error in process adding new contact</string>

    <string name="title_activity_receivers">Receivers</string>
    <string name="start_activity_receivers">Show receivers</string>
    <string name="info_about_receivers">List of Receivers:\n
            1. Bluetooth (on/off)\n
            2. Headset (plug/unplug)\n
            3. Wifi (on/ off) \n</string>

    <string name="load_image">Load image</string>
    <string name="make_photo">Make photo</string>

    <string name="read_contacts_err">Need permissions for read contacts!</string>
    <string name="use_camera_err">Need permissions for use camera</string>
    <string name="permissions_for_contacts_not_granted">Permission for contacts is not granted</string>
    <string name="permissions_for_camera_not_granted">Permission for camera is not granted</string>
    <string name="no_soft_for_use_camera">No program for use camera</string>
    <string name="no_camera">Device do not have a camera</string>
    <string name="go_to_settings">Settings</string>
</resources>
